# cursovaia2

./: .flake8  .gitignore  main.py  pyproject.toml
src/: hh_api.py  savers.py  utils.py  vacancy.py
tests/: test_hh_api.py  test_savers.py  test_utils.py  test_vacancy.py
