[project]
name = "cursovaia2"
version = "0.1.0"
description = ""
authors = [
    {name = "ne1ntrovert",email = "shironovilya777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.2.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "api (>=0.0.7,<0.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
